RESOLVED FIXED91604
[Qt] plugin tests should not be disabled for WebKit1
https://bugs.webkit.org/show_bug.cgi?id=91604
Summary [Qt] plugin tests should not be disabled for WebKit1
Balazs Kelemen
Reported 2012-07-18 02:28:56 PDT
Although bug 86620 blocks us to enable plugin tests for WebKit2, we should enable them with WebKit1.
Attachments
Patch (3.36 KB, patch)
2012-07-18 02:32 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-07-18 02:32:48 PDT
Simon Hausmann
Comment 2 2012-07-18 04:26:15 PDT
Note You need to log in before you can comment on or make changes to this bug.