[Qt] plugin tests should not be disabled for WebKit1 https://bugs.webkit.org/show_bug.cgi?id=91604

Patch by Balazs Kelemen <kbalazs@webkit.org> on 2012-07-18
Reviewed by Simon Hausmann.

Instead of not building TestNetscapePlugIn, we could programatically
disable actually loading it from WTR until https://bugs.webkit.org/show_bug.cgi?id=86620
has been solved, so we can still test plugins on WebKit1.

* Tools.pro:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):
* WebKitTestRunner/qt/TestControllerQt.cpp:
(WTR::TestController::initializeTestPluginDirectory):

Canonical link: https://commits.webkit.org/109402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122944 268f45cc-cd09-0410-ab3c-d52691b4dbfc