Tools/WebKitTestRunner/qt/TestControllerQt.cpp
@@ -104,7 +104,10 @@ void TestController::initializeInjectedBundlePath()
 
 void TestController::initializeTestPluginDirectory()
 {
-    m_testPluginDirectory = WKStringCreateWithUTF8CString(qgetenv("QTWEBKIT_PLUGIN_PATH").constData());
+    // FIXME: the test plugin cause some trouble for us, so we don't load it for the time being.
+    // See: https://bugs.webkit.org/show_bug.cgi?id=86620
+
+    // m_testPluginDirectory = WKStringCreateWithUTF8CString(qgetenv("QTWEBKIT_PLUGIN_PATH").constData());
 }
 
 void TestController::platformInitializeContext()
