Tools/Tools.pro
@@ -21,13 +21,8 @@ CONFIG += ordered
     SUBDIRS += MiniBrowser/qt/raw/MiniBrowserRaw.pro
 }
 
-# FIXME: with Qt 5 the test plugin cause some trouble during layout tests.
-# See: https://bugs.webkit.org/show_bug.cgi?id=86620
-# Reenable it after we have a fix for this issue.
-!haveQt(5) {
-    !win32:contains(DEFINES, ENABLE_NETSCAPE_PLUGIN_API=1) {
-        SUBDIRS += DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro
-    }
+!win32:contains(DEFINES, ENABLE_NETSCAPE_PLUGIN_API=1) {
+    SUBDIRS += DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro
 }
 
 OTHER_FILES = \
